# proj_prog

./: .gitignore  CMakeLists.txt  README.md
include/: Ball.h  Bonus.h  Game.h  Level.h  Menu.h  Paddle.h  Utilities.h
include/bricks/: BasicBrick.h  Brick.h  HexagonalBrick.h  TriangularBrick.h
levels/: easy_test.txt  level1.txt  level2.txt  level3.txt
src/: Ball.cpp  Game.cpp  Level.cpp  Menu.cpp  Paddle.cpp  Utilities.cpp  main.cpp
src/bricks/: BasicBrick.cpp  Brick.cpp  HexagonalBrick.cpp  TriangularBrick.cpp
